--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -2,7 +2,170 @@
 COLORS:
 
 Light green: #7ed56f
+  with 0.8 transparency: rgba(126, 213, 111, 0.8)
 Medium green: #55c57a
+  with 0.8 transparency: rgba(40, 180, 131, 0.8)
 Dark green: #28b485
 
 */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.7;
+  color: #777;
+  padding: 30px;
+}
+
+.header {
+  height: 95vh;
+  background-image: linear-gradient(to right bottom,
+      rgba(126, 213, 111, 0.8),
+      rgba(40, 180, 131, 0.8)),
+    url("../img/hero.jpg");
+  background-size: cover;
+  background-position: top;
+  position: relative;
+  clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
+}
+
+.logo-box {
+  position: absolute;
+  top: 40px;
+  left: 40px;
+}
+
+.logo {
+  height: 35px;
+}
+
+.text-box {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.heading-primary {
+  color: #ffffff;
+  text-transform: uppercase;
+  backface-visibility: hidden;
+  margin-bottom: 60px;
+}
+
+.heading-primary-main {
+  display: block;
+  font-size: 60px;
+  font-weight: 400;
+  letter-spacing: 35px;
+  animation: moveInLeft 1s ease-out;
+}
+
+.heading-primary-sub {
+  display: block;
+  font-size: 20px;
+  font-weight: 700;
+  letter-spacing: 17.5px;
+  animation: moveInRight 1s ease-out;
+}
+
+@keyframes moveInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-100px);
+  }
+
+  80% {
+    transform: translateX(10px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes moveInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(100px);
+  }
+
+  80% {
+    transform: translateX(-10px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+.btn:link,
+.btn:visited {
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 15px 40px;
+  display: inline-block;
+  border-radius: 100px;
+  transition: all .2s;
+}
+
+.btn:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 10px 20px rgba(0,0,0,.2);
+}
+
+.btn:active {
+  transform: translateY(-1px);
+  box-shadow: 0 5px 10px rgba(0,0,0,.2);
+}
+
+.btn-white {
+  background-color: #fff;
+  color: #777;
+}
+
+/* Extra code to make website mobile-friendly... */
+@media only screen and (max-width: 900px) {
+  .heading-primary-main {
+    font-size: 45px;
+    letter-spacing: 30.625px;
+  }
+
+  .heading-primary-sub {
+    font-size: 15px;
+    letter-spacing: 13.125px;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .heading-primary-main {
+    font-size: 30px;
+    letter-spacing: 17.5px;
+  }
+
+  .heading-primary-sub {
+    font-size: 10px;
+    letter-spacing: 8.75px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .heading-primary-main {
+    font-size: 15px;
+    letter-spacing: 5.833px;
+  }
+
+  .heading-primary-sub {
+    font-size: 5px;
+    letter-spacing: 4.375px;
+  }
+}
